@@ -1951,14 +1951,17 @@ test_run_normalize_LDADD = \
 	$(GLIB_LIBS)
 
 test_run_convert_SOURCES = test/run_convert.cxx \
-	src/config/ConfigError.cxx \
 	src/Log.cxx src/LogBackend.cxx \
 	src/AudioFormat.cxx \
 	src/CheckAudioFormat.cxx \
 	src/AudioParser.cxx
 test_run_convert_LDADD = \
 	$(PCM_LIBS) \
+	libconf.a \
+	$(FS_LIBS) \
+	libsystem.a \
 	libutil.a \
+	$(ICU_LDADD) \
 	$(GLIB_LIBS)
 
 test_run_output_LDADD = $(MPD_LIBS) \
