@@ -86,6 +86,7 @@ enum class ConfigBlockOption {
 	DECODER,
 	INPUT,
 	PLAYLIST_PLUGIN,
+	RESAMPLER,
 	AUDIO_FILTER,
 	DATABASE,
 	NEIGHBORS,
