@@ -23,6 +23,8 @@
 #include "config/ConfigGlobal.hxx"
 #include "config/ConfigOption.hxx"
 #include "config/ConfigError.hxx"
+#include "config/Block.hxx"
+#include "config/Param.hxx"
 #include "util/Error.hxx"
 
 #ifdef ENABLE_LIBSAMPLERATE
@@ -49,34 +51,119 @@ enum class SelectedResampler {
 
 static SelectedResampler selected_resampler = SelectedResampler::FALLBACK;
 
-bool
-pcm_resampler_global_init(Error &error)
+static const ConfigBlock *
+MakeResamplerDefaultConfig(ConfigBlock &block)
 {
-	const char *converter =
-		config_get_string(ConfigOption::SAMPLERATE_CONVERTER, "");
+	assert(block.IsEmpty());
 
-	if (strcmp(converter, "internal") == 0)
-		return true;
+#ifdef ENABLE_LIBSAMPLERATE
+	block.AddBlockParam("plugin", "libsamplerate");
+#elif defined(ENABLE_SOXR)
+	block.AddBlockParam("plugin", "soxr");
+#else
+	block.AddBlockParam("plugin", "internal");
+#endif
+	return &block;
+}
+
+/**
+ * Convert the old "samplerate_converter" setting to a new-style
+ * "resampler" block.
+ */
+static const ConfigBlock *
+MigrateResamplerConfig(const config_param &param, ConfigBlock &block)
+{
+	assert(block.IsEmpty());
+
+	block.line = param.line;
+
+	const char *converter = param.value.c_str();
+	if (*converter == 0 || strcmp(converter, "internal") == 0) {
+		block.AddBlockParam("plugin", "internal");
+		return &block;
+	}
 
 #ifdef ENABLE_SOXR
-	if (memcmp(converter, "soxr", 4) == 0) {
-		selected_resampler = SelectedResampler::SOXR;
-		return pcm_resample_soxr_global_init(converter, error);
+	if (strcmp(converter, "soxr") == 0) {
+		block.AddBlockParam("plugin", "soxr");
+		return &block;
+	}
+
+	if (memcmp(converter, "soxr ", 5) == 0) {
+		block.AddBlockParam("plugin", "soxr");
+		block.AddBlockParam("quality", converter + 5);
+		return &block;
 	}
 #endif
 
-#ifdef ENABLE_LIBSAMPLERATE
-	selected_resampler = SelectedResampler::LIBSAMPLERATE;
-	return pcm_resample_lsr_global_init(converter, error);
-#endif
+	block.AddBlockParam("plugin", "libsamplerate");
+	block.AddBlockParam("type", converter);
+	return &block;
+}
 
-	if (*converter == 0)
+static const ConfigBlock *
+MigrateResamplerConfig(const config_param *param, ConfigBlock &buffer)
+{
+	assert(buffer.IsEmpty());
+
+	return param == nullptr
+		? MakeResamplerDefaultConfig(buffer)
+		: MigrateResamplerConfig(*param, buffer);
+}
+
+static const ConfigBlock *
+GetResamplerConfig(ConfigBlock &buffer, Error &error)
+{
+	const auto *old_param =
+		config_get_param(ConfigOption::SAMPLERATE_CONVERTER);
+	const auto *block = config_get_block(ConfigBlockOption::RESAMPLER);
+	if (block == nullptr)
+		return MigrateResamplerConfig(old_param, buffer);
+
+	if (old_param != nullptr) {
+		error.Format(config_domain,
+			     "Cannot use both 'resampler' (line %d) and 'samplerate_converter' (line %d)",
+			     block->line, old_param->line);
+		return nullptr;
+	}
+
+	return block;
+}
+
+bool
+pcm_resampler_global_init(Error &error)
+{
+	ConfigBlock buffer;
+	const auto *block = GetResamplerConfig(buffer, error);
+	if (block == nullptr)
+		return false;
+
+	const char *plugin_name = block->GetBlockValue("plugin");
+	if (plugin_name == nullptr) {
+		error.Format(config_domain,
+			     "'plugin' missing in line %d", block->line);
+		return false;
+	}
+
+	if (strcmp(plugin_name, "internal") == 0) {
+		selected_resampler = SelectedResampler::FALLBACK;
 		return true;
-
-	error.Format(config_domain,
-		     "The samplerate_converter '%s' is not available",
-		     converter);
-	return false;
+#ifdef ENABLE_SOXR
+	} else if (strcmp(plugin_name, "soxr") == 0) {
+		selected_resampler = SelectedResampler::SOXR;
+		return pcm_resample_soxr_global_init(*block, error);
+#endif
+#ifdef ENABLE_LIBSAMPLERATE
+	} else if (strcmp(plugin_name, "libsamplerate") == 0) {
+		selected_resampler = SelectedResampler::LIBSAMPLERATE;
+		return pcm_resample_lsr_global_init(*block, error);
+#endif
+	} else {
+		error.Format(config_domain,
+			     "No such resampler plugin: %s",
+			     plugin_name);
+		return false;
+	}
 }
 
 PcmResampler *
