@@ -18,6 +18,9 @@ ver 0.20 (not yet released)
   - recorder: allow dynamic file names
 * mixer
   - null: new plugin
+* resampler
+  - new block "resampler" in configuration file
+    replacing the old "samplerate_converter" setting
 * reset song priority on playback
 * write database and state file atomically
 * remove dependency on GLib
